--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <h3 id="result_label">Posso ouvir - </h3>
       <h4 id="result_confidence">Precisão - </h4>
         <br>
-        <img src="aliens-01.png" id="alien1" width="300" height="300">
-        <img src="aliens-02.png" id="alien2" width="300" height="300">
-        <img src="aliens-03.png" id="alien3" width="300" height="300">
-        <img src="aliens-04.png" id="alien4" width="300" height="300">
+        <img src="j1.jpg" id="vini_jr" width="300" height="300">
+        <img src="neymar.jpg" id="neymar" width="300" height="300">
+        <img src="j4.jpg" id="pedro" width="300" height="300">
+        <img src="j2.jpg" id="paqueta" width="300" height="300">
       </center>
       </div>
       <div class="copy_right_footer">
